<resources>
    <string name="app_name">DesafioUseMobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nome</string>
    <string name="link_image">Link da imagem</string>
    <string name="description">Descrição</string>
    <string name="specie">Espécie</string>
    <string name="age">Idade</string>
    <string name="registration">Cadastrar</string>
</resources>