<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    tools:context=".view.fragments.RegistrationFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/name"
            android:padding="16sp"
            android:singleLine="true"
            style="@style/text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/link_image"
            android:padding="16sp"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            style="@style/text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/description"
            android:padding="16sp"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            style="@style/text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/specie"
            android:padding="16sp"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            style="@style/text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:hint="@string/age"
            android:padding="16sp"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            style="@style/text"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            style="@style/text"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>